<resources>
    <string name="app_name">Ludo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you">You</string>
    <string name="searching">Searching...</string>
    <string name="select_game">SELECT GAME</string>
    <string name="all">All</string>
    <string name="regular_n8_10_min_game">REGULAR\n8-10 min game</string>
    <string name="select_players">SELECT PLAYERS</string>
    <string name="ludo_playzelo">Ludo PlayZelo</string>
    <string name="score_0">Score: 0</string>

    <string-array name="Select_No_of_Players">
        <item>2 Players</item>
        <item>4 Players</item>
    </string-array>
</resources>